--- a/NIBM_COVID19/Base.lproj/Main.storyboard
+++ b/NIBM_COVID19/Base.lproj/Main.storyboard
@@ -298,12 +298,51 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="1km-JT-t48">
+                                <rect key="frame" x="142" y="568" width="90" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="2Fi-Ev-FNo"/>
+                                    <constraint firstAttribute="height" constant="50" id="Gpx-sI-J8t"/>
+                                </constraints>
+                                <state key="normal" title="Map"/>
+                                <connections>
+                                    <segue destination="ZXE-zf-oQk" kind="show" id="Bk0-I1-r5x"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7ho-xl-VfH">
+                                <rect key="frame" x="20" y="567" width="90" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="r3h-fD-rA4"/>
+                                    <constraint firstAttribute="width" constant="90" id="zJQ-mx-hoT"/>
+                                </constraints>
+                                <state key="normal" title="Profile"/>
+                                <connections>
+                                    <segue destination="tGZ-lj-4FQ" kind="show" id="OmN-kH-tsH"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6hN-iB-hj1">
+                                <rect key="frame" x="265" y="568" width="90" height="50"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="90" id="5ls-ed-jMe"/>
+                                    <constraint firstAttribute="height" constant="50" id="gNj-ro-jAd"/>
+                                </constraints>
+                                <state key="normal" title="Safty"/>
+                                <connections>
+                                    <segue destination="7Es-vr-Ve3" kind="show" id="yUI-vd-d3z"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="1km-JT-t48" firstAttribute="leading" secondItem="20y-lL-ahE" secondAttribute="leading" constant="142" id="4BZ-ld-cRE"/>
                             <constraint firstItem="5y7-dm-v8u" firstAttribute="leading" secondItem="20y-lL-ahE" secondAttribute="leading" constant="20" id="Mkb-BS-88E"/>
+                            <constraint firstItem="20y-lL-ahE" firstAttribute="bottom" secondItem="7ho-xl-VfH" secondAttribute="bottom" constant="50" id="QKm-sC-Hgw"/>
                             <constraint firstItem="20y-lL-ahE" firstAttribute="trailing" secondItem="5y7-dm-v8u" secondAttribute="trailing" constant="174" id="aN8-Ca-kLg"/>
+                            <constraint firstItem="20y-lL-ahE" firstAttribute="trailing" secondItem="6hN-iB-hj1" secondAttribute="trailing" constant="20" id="fA7-Zj-Ywg"/>
+                            <constraint firstItem="20y-lL-ahE" firstAttribute="bottom" secondItem="1km-JT-t48" secondAttribute="bottom" constant="49" id="hGa-7G-Wy3"/>
+                            <constraint firstItem="20y-lL-ahE" firstAttribute="bottom" secondItem="6hN-iB-hj1" secondAttribute="bottom" constant="49" id="iav-yk-jWc"/>
                             <constraint firstItem="5y7-dm-v8u" firstAttribute="top" secondItem="20y-lL-ahE" secondAttribute="top" constant="35" id="sDH-XH-uxl"/>
+                            <constraint firstItem="7ho-xl-VfH" firstAttribute="leading" secondItem="20y-lL-ahE" secondAttribute="leading" constant="20" id="xM7-Vx-LYU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="20y-lL-ahE"/>
                     </view>
@@ -315,6 +354,85 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="AIN-1R-fva" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3864.8000000000002" y="-112.89355322338831"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="kqh-RQ-Ozx">
+            <objects>
+                <viewController id="tGZ-lj-4FQ" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ver-Xn-nE6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="A6b-Sy-DJA"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5W8-n7-cnF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3090" y="462"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="kfG-7h-QKL">
+            <objects>
+                <viewController id="7Es-vr-Ve3" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="dSU-K4-MaJ">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="steps" translatesAutoresizingMaskIntoConstraints="NO" id="H46-rl-xbP">
+                                <rect key="frame" x="70" y="100" width="235" height="155"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="155" id="m4N-J2-CEC"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I6S-2h-IEp">
+                                <rect key="frame" x="172" y="449" width="30" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="next"/>
+                                <connections>
+                                    <segue destination="wM9-FN-OzE" kind="show" id="3Zz-PG-wua"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="H46-rl-xbP" firstAttribute="top" secondItem="fl2-XB-BbX" secondAttribute="top" constant="80" id="kWZ-FQ-0HZ"/>
+                            <constraint firstItem="H46-rl-xbP" firstAttribute="leading" secondItem="fl2-XB-BbX" secondAttribute="leading" constant="70" id="uBR-wk-G5L"/>
+                            <constraint firstItem="fl2-XB-BbX" firstAttribute="trailing" secondItem="H46-rl-xbP" secondAttribute="trailing" constant="70" id="vki-fS-vUE"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="fl2-XB-BbX"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ayz-XP-G1u" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4736.8000000000002" y="-113.79310344827587"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="ual-qE-gqc">
+            <objects>
+                <viewController id="ZXE-zf-oQk" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="CvB-Pv-njC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="jzJ-IF-3V5">
+                                <rect key="frame" x="0.0" y="20" width="375" height="400"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="400" id="hK9-m2-e8s"/>
+                                </constraints>
+                            </mapView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="jzJ-IF-3V5" firstAttribute="top" secondItem="RFf-ny-tX9" secondAttribute="top" id="hxt-I1-rwU"/>
+                            <constraint firstItem="RFf-ny-tX9" firstAttribute="trailing" secondItem="jzJ-IF-3V5" secondAttribute="trailing" id="s45-6s-dvy"/>
+                            <constraint firstItem="jzJ-IF-3V5" firstAttribute="leading" secondItem="RFf-ny-tX9" secondAttribute="leading" id="t01-hW-nQm"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="RFf-ny-tX9"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a8Y-fz-gSd" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4737" y="559"/>
         </scene>
         <!--Login View Controller-->
         <scene sceneID="c6O-Rx-x9E">
@@ -410,9 +528,11 @@
     </scenes>
     <resources>
         <image name="LOGO" width="1280" height="720"/>
+        <image name="steps" width="225" height="225"/>
     </resources>
     <inferredMetricsTieBreakers>
         <segue reference="AW2-UD-pd4"/>
+        <segue reference="3Zz-PG-wua"/>
         <segue reference="YfN-KJ-mhf"/>
     </inferredMetricsTieBreakers>
 </document>
