--- a/NIBM_COVID19/Base.lproj/Main.storyboard
+++ b/NIBM_COVID19/Base.lproj/Main.storyboard
@@ -514,19 +514,17 @@
         <!--Back Butten Pressed View Controller-->
         <scene sceneID="kfG-7h-QKL">
             <objects>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ayz-XP-G1u" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <viewController id="7Es-vr-Ve3" customClass="BackButtenPressedViewController" customModule="NIBM_COVID19" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="dSU-K4-MaJ">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="steps" translatesAutoresizingMaskIntoConstraints="NO" id="H46-rl-xbP">
-                                <rect key="frame" x="70" y="100" width="235" height="155"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="155" id="m4N-J2-CEC"/>
-                                </constraints>
+                                <rect key="frame" x="40" y="100" width="295" height="264"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I6S-2h-IEp">
-                                <rect key="frame" x="40" y="446" width="295" height="30"/>
+                                <rect key="frame" x="40" y="555" width="295" height="30"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="mXD-O4-Dpp"/>
@@ -536,7 +534,7 @@
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oV6-iS-pKX">
-                                <rect key="frame" x="40" y="498" width="295" height="30"/>
+                                <rect key="frame" x="40" y="607" width="295" height="30"/>
                                 <color key="backgroundColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="jSF-Wn-uCv"/>
@@ -551,20 +549,20 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstItem="H46-rl-xbP" firstAttribute="leading" secondItem="fl2-XB-BbX" secondAttribute="leading" constant="40" id="4Je-0h-toR"/>
+                            <constraint firstItem="fl2-XB-BbX" firstAttribute="bottom" secondItem="oV6-iS-pKX" secondAttribute="bottom" constant="30" id="8ge-L5-lR6"/>
                             <constraint firstItem="I6S-2h-IEp" firstAttribute="top" secondItem="H46-rl-xbP" secondAttribute="bottom" constant="191" id="CFk-pq-BIz"/>
                             <constraint firstItem="fl2-XB-BbX" firstAttribute="trailing" secondItem="I6S-2h-IEp" secondAttribute="trailing" constant="40" id="QmB-Ca-gwm"/>
                             <constraint firstItem="fl2-XB-BbX" firstAttribute="trailing" secondItem="oV6-iS-pKX" secondAttribute="trailing" constant="40" id="S7W-78-Hda"/>
                             <constraint firstItem="oV6-iS-pKX" firstAttribute="top" secondItem="I6S-2h-IEp" secondAttribute="bottom" constant="22" id="YCp-Gu-jqe"/>
                             <constraint firstItem="I6S-2h-IEp" firstAttribute="leading" secondItem="fl2-XB-BbX" secondAttribute="leading" constant="40" id="eAW-Q9-7GF"/>
+                            <constraint firstItem="fl2-XB-BbX" firstAttribute="trailing" secondItem="H46-rl-xbP" secondAttribute="trailing" constant="40" id="i5R-fO-Fpe"/>
                             <constraint firstItem="H46-rl-xbP" firstAttribute="top" secondItem="fl2-XB-BbX" secondAttribute="top" constant="80" id="kWZ-FQ-0HZ"/>
                             <constraint firstItem="oV6-iS-pKX" firstAttribute="leading" secondItem="fl2-XB-BbX" secondAttribute="leading" constant="40" id="liK-l0-gmy"/>
-                            <constraint firstItem="H46-rl-xbP" firstAttribute="leading" secondItem="fl2-XB-BbX" secondAttribute="leading" constant="70" id="uBR-wk-G5L"/>
-                            <constraint firstItem="fl2-XB-BbX" firstAttribute="trailing" secondItem="H46-rl-xbP" secondAttribute="trailing" constant="70" id="vki-fS-vUE"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="fl2-XB-BbX"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ayz-XP-G1u" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="4736.8000000000002" y="-113.79310344827587"/>
         </scene>
